<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Top Section -->
    <TextView
        android:id="@+id/textview1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/label_textview1" />

    <TextView
        android:id="@+id/textview2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_textview2"
        android:layout_below="@+id/textview1"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/textview3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_textview3"
        android:layout_below="@+id/textview2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="17dp"
        android:layout_marginTop="46dp" />

    <!-- Middle Section - RadioGroup and RadioButtons -->
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radiobtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_radiobtn1" />

        <RadioButton
            android:id="@+id/radiobtn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_radiobtn2"
            android:layout_marginStart="50dp" />

        <RadioButton
            android:id="@+id/radiobtn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_radiobtn3"
            android:layout_marginStart="50dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textview4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:layout_marginStart="120dp"
        android:layout_marginTop="100dp"
        android:text="@string/label_textview4"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textview5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="100dp"
        android:text="@string/label_textview5"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textview6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_marginStart="145dp"
        android:layout_marginTop="100dp"
        android:layout_toEndOf="@+id/textview4"
        android:text="@string/label_textview6"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview6"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/hint_edittext"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:background="@color/holo_blue_dark"
        android:text="@string/label_button" />

    <TextView
        android:id="@+id/textview7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="167dp"
        android:text="@string/label_txtview7"
        android:textColor="@color/holo_blue_dark"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/textview8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="137dp"
        android:text="@string/label_textview8"
        android:textSize="34sp" />
</RelativeLayout>
